feat: pause button functionality

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div id="countdown" class="countdown">5</div>
       <div id="progress" class="progress">Rep 1/10 - Set 1/3</div>
     </div>
+    <button type="button" id="pause-btn" class="btn btn-pause">Pause</button>
     <button type="button" id="stop-btn" class="btn btn-danger">Stop</button>
   </div>
 
